--- a/Index.html
+++ b/Index.html
@@ -9,30 +9,29 @@
   </head>
   <body>
     <!-- NAVBAR -->
-<header>
-  <nav class="navbar bg-dark border-bottom fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1"><a href="./Index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
-      </span>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-         <div class="navbar-nav">
-           <a class="nav-link active" aria-current="page" href="#torneo">El Torneo</a>
-          <a class="nav-link" href="#jugadores">Los jugadores</a>
-          <a class="nav-link" href="#lugarfecha">El lugar y la fecha</a>
-          <a class="nav-link" href="#contacto">Conviértete en sobreviviente</a>
-           <a class="nav-link" href="./ticket.html">Suscribirme</a>
-         </div>
-       </div>
-     </div>
-   </nav>
-</header>
-<!-- /NAVBAR -->
+   <header>
+     <nav class="navbar bg-dark border-bottom fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+       <div class="container-fluid">
+         <span class="navbar-brand mb-0 h1"><a href="./Index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
+         </span>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+          </button>
+         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+           <div class="navbar-nav">
+             <a class="nav-link active" aria-current="page" href="./Torneo.html">El Torneo</a>
+             <a class="nav-link" href="./LugarFecha.html">El lugar y la fecha</a>
+             <a class="nav-link" href="./Reglamento.html">Reglamento</a>
+             <a class="nav-link" href="./Fixture">Fixture</a>
+           </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+   <!-- /NAVBAR -->
 
 
-<!-- CONFERENCIA -->
+   <!-- TORNEO -->
 
     <section>
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -49,8 +48,8 @@
                 <h1>Copa FreeFire 2024</h1>
                 <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
                 <div class="row">
-                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#jugadores">Quiero ser participar</a></div>
-                  <div class="col"><a class="btn btn-success btn-primary" href="./ticket.html">Suscribirme</a></div>
+                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
+                  <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
                 </div>
               </div>
             </div>
@@ -62,8 +61,8 @@
                 <h1>Copa FreeFire 2024</h1>
                 <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
                 <div class="row">
-                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#jugadores">Quiero ser participar</a></div>
-                  <div class="col"><a class="btn btn-success btn-primary" href="./ticket.html">Suscribirme</a></div>
+                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
+                  <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
                 </div>
               </div>
             </div>
@@ -75,8 +74,8 @@
                 <h1>Copa FreeFire 2024</h1>
                 <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
                 <div class="row">
-                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#jugadores">Quiero ser participar</a></div>
-                  <div class="col"><a class="btn btn-success btn-primary" href="./ticket.html">Suscribirme</a></div>
+                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
+                  <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
                 </div>
               </div>
             </div>
@@ -95,130 +94,130 @@
 
 
 
-<!-- /TORNEO -->
+    <!-- /TORNEO -->
 
 
-<!-- JUGADORES -->
-<section id="jugadores" class="mt-4 mb-4">
-  <h6 class="text-center">Los</h6>
-  <h2 class="text-center mb-4">favoritos</h2>
-  <div class="row align-items-center justify-content-center">
-    <div class="col-auto">
-      <div class="card card-custom mb-4">
-        <img src="recursos/CharacterAlok.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h6 class="jugador-tag1">Activa</h6>
-          <h6 class="jugador-tag2">Survival</h6>
-          <h5 class="card-title">Alok</h5>
-          <p class="card-text">La música y las presentaciones del DJ Alok poseen una energía y un alma únicas que pueden estimular los sentimientos y las emociones del ser más íntimo de cada persona. Alok comparte su habilidad con sus compañeros. </p>
+    <!-- PERSONAJES -->
+   <section id="personajes" class="mt-4 mb-4">
+      <h6 class="text-center">Los</h6>
+      <h2 class="text-center mb-4">favoritos</h2>
+      <div class="row align-items-center justify-content-center">
+        <div class="col-auto">
+          <div class="card card-custom mb-4">
+            <img src="recursos/CharacterAlok.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h6 class="jugador-tag1">Activa</h6>
+              <h6 class="jugador-tag2">Survival</h6>
+              <h5 class="card-title">Alok</h5>
+              <p class="card-text">La música y las presentaciones del DJ Alok poseen una energía y un alma únicas que pueden estimular los sentimientos y las emociones del ser más íntimo de cada persona. Alok comparte su habilidad con sus compañeros. </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto">
+          <div class="card card-custom mb-4">
+            <img src="recursos/CharacterSonia.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h6 class="jugador-tag1">Activa</h6>
+              <h6 class="jugador-tag2">Survival</h6>
+              <h5 class="card-title">Sonia</h5>
+              <p class="card-text">Sonia es una nanocientífica genéticamente modificada con una inteligencia y experiencia excepcionales en nanotecnología. Al recibir daño fatal, entra en un estado invulnerable e inmóvil durante 0,4 segundos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto">
+          <div class="card card-custom mb-4">
+            <img src="recursos/CharacterCr7.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h6 class="jugador-tag3">Pasiva</h6>
+              <h6 class="jugador-tag4">Cazador</h6>
+              <h5 class="card-title">Chrono</h5>
+              <p class="card-text">Chrono proviene de un universo paralelo donde la ciencia y la tecnología están mucho más avanzadas. Crea un campo de fuerza que bloquea el daño. No puede atacar enemigos externos desde dentro del campo.</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-auto">
-      <div class="card card-custom mb-4">
-        <img src="recursos/CharacterSonia.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h6 class="jugador-tag1">Activa</h6>
-          <h6 class="jugador-tag2">Survival</h6>
-          <h5 class="card-title">Sonia</h5>
-          <p class="card-text">Sonia es una nanocientífica genéticamente modificada con una inteligencia y experiencia excepcionales en nanotecnología. Al recibir daño fatal, entra en un estado invulnerable e inmóvil durante 0,4 segundos.</p>
+    </section>
+   <!-- /PERSONAJES -->
+
+
+    <!-- LUGAR -->
+    <section id="lugarfecha" class="mt-4 mb-4">
+      <div class="row">
+        <div class="col-lg-6 d-none d-lg-block">
+          <img src="recursos/img1.png" alt="Imagen" class="img1">
+        </div>
+        <div class="col-lg-6 bg-dark d-none d-lg-block">
+          <h3 class="text-white p-4">Copa FreeFire 2024</h3>
+          <p class="text-white p-4">Participa junto a tu escuadra para ganar increibles premios. A medida que avancen de instancia podran ir acumulando diferentes skins para los personajes, skins de armas, diamantes y mucho mas.</p>
+          <button class="btn btn-primary m-4">Conocé más</button>
+        </div>
+        <!-- version responsive -->
+        <div class="col-12 mt-4 d-lg-none">
+          <img src="recursos/img1.png" alt="Imagen" class="img1">
+        </div>
+        <div class="col-12 bg-dark d-lg-none">
+          <h3 class="text-white p-4">Bs As - Octubre</h3>
+          <p class="text-white p-4">Participa junto a tu escuadra para ganar increibles premios. A medida que avancen de instancia podran ir acumulando diferentes skins para los personajes, skins de armas, diamantes y mucho mas.</p>
+          <button class="btn btn-primary m-4">Conocé más</button>
         </div>
       </div>
-    </div>
-    <div class="col-auto">
-      <div class="card card-custom mb-4">
-        <img src="recursos/CharacterCr7.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h6 class="jugador-tag3">Pasiva</h6>
-          <h6 class="jugador-tag4">Cazador</h6>
-          <h5 class="card-title">Chrono</h5>
-          <p class="card-text">Chrono proviene de un universo paralelo donde la ciencia y la tecnología están mucho más avanzadas. Crea un campo de fuerza que bloquea el daño. No puede atacar enemigos externos desde dentro del campo.</p>
+    </section>
+    <!-- /LUGAR --> 
+
+
+
+
+    <!-- /PARTICIPAR  -->
+    <section id="participar" class="container mt-4 mb-4">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <form class="contacto-formulario">
+            <h5 class="mb-1 text-center">CONVIÉRTETE EN UN</h5>
+            <h2 class="mb-4 text-center">SOBREVIVIENTE</h2>
+            <h6 class="mb-3 text-center contacto-h6">Anotate con tu escuadra para hacer Booyah! Contanos sobre sus habilidades preferidas!</h6>
+            <div class="form-group">
+              <label for="nombre">Nombre</label>
+              <input type="text" class="form-control mb-3" id="nombre" placeholder="Ingresa su nombre">
+            </div>
+            <div class="form-group">
+              <label for="apellido">Apellido</label>
+              <input type="text" class="form-control mb-3" id="apellido" placeholder="Ingresa su apellido">
+            </div>
+            <div class="form-group">
+              <label for="correo">E-mail</label>
+               <input type="email" class="form-control mb-3" id="correo" placeholder="Ingresa tu e-mail">
+            </div>
+            <div class="form-group">
+              <label for="mensaje">Mensaje</label>
+              <textarea class="form-control mb-3" id="mensaje" rows="4" placeholder="Contanos sobre tu escuadra"></textarea>
+            </div>
+            <button type="submit" class="btn btn-success btn-lg btn-block">Enviar</button>
+          </form>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-<!-- /jugadores -->
+    </section>
 
-
-<!-- LUGAR -->
-<section id="lugarfecha" class="mt-4 mb-4">
-  <div class="row">
-    <div class="col-lg-6 d-none d-lg-block">
-      <img src="recursos/img1.png" alt="Imagen" class="img1">
-    </div>
-    <div class="col-lg-6 bg-dark d-none d-lg-block">
-      <h3 class="text-white p-4">Copa FreeFire 2024</h3>
-      <p class="text-white p-4">Participa junto a tu escuadra para ganar increibles premios. A medida que avancen de instancia podran ir acumulando diferentes skins para los personajes, skins de armas, diamantes y mucho mas.</p>
-      <button class="btn btn-primary m-4">Conocé más</button>
-    </div>
-    <!-- version responsive -->
-    <div class="col-12 mt-4 d-lg-none">
-      <img src="recursos/img1.png" alt="Imagen" class="img1">
-    </div>
-    <div class="col-12 bg-dark d-lg-none">
-      <h3 class="text-white p-4">Bs As - Octubre</h3>
-      <p class="text-white p-4">Participa junto a tu escuadra para ganar increibles premios. A medida que avancen de instancia podran ir acumulando diferentes skins para los personajes, skins de armas, diamantes y mucho mas.</p>
-      <button class="btn btn-primary m-4">Conocé más</button>
-    </div>
-  </div>
-</section>
-<!-- /LUGAR -->
-
-
-
-
-<!-- /CONTACTO  -->
-<section id="contacto" class="container mt-4 mb-4">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <form class="contacto-formulario">
-        <h5 class="mb-1 text-center">CONVIÉRTETE EN UN</h5>
-        <h2 class="mb-4 text-center">SOBREVIVIENTE</h2>
-        <h6 class="mb-3 text-center contacto-h6">Anotate con tu escuadra para hacer Booyah! Contanos sobre sus habilidades preferidas!</h6>
-        <div class="form-group">
-          <label for="nombre">Nombre</label>
-          <input type="text" class="form-control mb-3" id="nombre" placeholder="Ingresa su nombre">
-        </div>
-        <div class="form-group">
-          <label for="apellido">Apellido</label>
-          <input type="text" class="form-control mb-3" id="apellido" placeholder="Ingresa su apellido">
-        </div>
-        <div class="form-group">
-          <label for="correo">E-mail</label>
-          <input type="email" class="form-control mb-3" id="correo" placeholder="Ingresa tu e-mail">
-        </div>
-        <div class="form-group">
-          <label for="mensaje">Mensaje</label>
-          <textarea class="form-control mb-3" id="mensaje" rows="4" placeholder="Contanos sobre tu escuadra"></textarea>
-        </div>
-        <button type="submit" class="btn btn-success btn-lg btn-block">Enviar</button>
-      </form>
-    </div>
-  </div>
-</section>
-
-<!-- /CONTACTO  -->
+    <!-- /PARTICIPAR -->
 
 
     <!-- FOOTER -->
-<footer class="bg-dark text-light p-4">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12">
-        <ul class="list-inline text-center flex-column flex-md-row">
-          <li class="list-inline-item"><a href="#">Preguntas Frecuentes</a></li>
-          <li class="list-inline-item"><a href="#">Contáctanos</a></li>
-          <li class="list-inline-item"><a href="#">Sponsors</a></li>
-          <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
-          <li class="list-inline-item"><a href="#">Privacidad</a></li>
-          <li class="list-inline-item"><a href="#">Streamers</a></li>
-        </ul>
+    <footer class="bg-dark text-light p-4">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <ul class="list-inline text-center flex-column flex-md-row">
+              <li class="list-inline-item"><a href="#">Preguntas Frecuentes</a></li>
+              <li class="list-inline-item"><a href="#">Contáctanos</a></li>
+              <li class="list-inline-item"><a href="#">Sponsors</a></li>
+              <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
+              <li class="list-inline-item"><a href="#">Privacidad</a></li>
+              <li class="list-inline-item"><a href="#">Streamers</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</footer>
-<!-- /FOOTER -->
+    </footer>
+    <!-- /FOOTER -->
 
 
 
