--- a/Fixture.html
+++ b/Fixture.html
@@ -30,31 +30,52 @@
     </header>
    <!-- /NAVBAR -->
 
-   
 
-   <!--  FIXTURE -->
-   <!-- /FIXTURE -->
+   <!-- BANNER -->
 
-    <!-- FOOTER -->
-    <footer class="bg-dark text-light p-4">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12">
-            <ul class="list-inline text-center flex-column flex-md-row">
-              <li class="list-inline-item"><a href="#">Preguntas Frecuentes</a></li>
-              <li class="list-inline-item"><a href="#">Contáctanos</a></li>
-              <li class="list-inline-item"><a href="#">Sponsors</a></li>
-              <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
-              <li class="list-inline-item"><a href="#">Privacidad</a></li>
-              <li class="list-inline-item"><a href="#">Streamers</a></li>
-            </ul>
+   <section>
+    <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/recursos/payasos.jpg" class="d-block w-100 oscurecer" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <div class="mt-4 text-end">
+              <h1>Copa FreeFire 2024</h1>
+              <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
+              <div class="row">
+                <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
+                <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+       </div>
+    </div>
+  </section>
+
+
+    <!-- FIXTURE -->
+    <!-- /FIXTURE -->
+
+
+     <!-- FOOTER -->
+     <footer class="bg-dark text-light p-4">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12">
+              <ul class="list-inline text-center flex-column flex-md-row">
+                <li class="list-inline-item"><a href="#">Preguntas Frecuentes</a></li>
+                <li class="list-inline-item"><a href="#">Contáctanos</a></li>
+                <li class="list-inline-item"><a href="#">Sponsors</a></li>
+                <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
+                <li class="list-inline-item"><a href="#">Privacidad</a></li>
+                <li class="list-inline-item"><a href="#">Streamers</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
     <!-- /FOOTER -->
 
-
-
-  </body>
+</body>
 </html>
