--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
                 <h1>Copa FreeFire 2024</h1>
                 <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
                 <div class="row">
-                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
+                  <div class="col"><a class="participar btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
                   <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
                 </div>
               </div>
@@ -156,7 +156,7 @@
           <img src="recursos/img1.png" alt="Imagen" class="img1">
         </div>
         <div class="col-12 bg-dark d-lg-none">
-          <h3 class="text-white p-4">Bs As - Octubre</h3>
+          <h3 class="text-white p-4">Copa FreeFire 2024</h3>
           <p class="text-white p-4">Participa junto a tu escuadra para ganar increibles premios. A medida que avancen de instancia podran ir acumulando diferentes skins para los personajes, skins de armas, diamantes y mucho mas.</p>
           <button class="btn btn-primary m-4">Conocé más</button>
         </div>
