se agregan archivos en carpeta recursos

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
    <!-- /NAVBAR -->
 
 
-   <!-- TORNEO -->
+   <!-- BANNER -->
 
     <section>
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -94,7 +94,7 @@
 
 
 
-    <!-- /TORNEO -->
+    <!-- /BANNER -->
 
 
     <!-- PERSONAJES -->
