--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ProyectoPythonGrupo10</title>
+
+    <!-- agregar favicon-->
+    <link rel="icon" type="image/vnd.microsoft.icon" href="recursos/favicon.ico" sizes="16x16 24x24
+    36x36 48x48"> 
+    
     <link rel="stylesheet" type="text/css" href="./Styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
