--- a/Index.html
+++ b/Index.html
@@ -181,7 +181,7 @@
             </div>
             <div class="form-group">
               <label for="apellido">Apellido</label>
-              <input type="text" class="form-control mb-3" id="apellido" placeholder="Ingresa su apellido">
+              <input type="text" class="form-control mb-3" id="apellido" placeholder="Ingresa tu apellido">
             </div>
             <div class="form-group">
               <label for="correo">E-mail</label>
@@ -212,6 +212,7 @@
               <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
               <li class="list-inline-item"><a href="#">Privacidad</a></li>
               <li class="list-inline-item"><a href="#">Streamers</a></li>
+              <p> Trabajo Practico Integrador - Python - CAC2024</p>
             </ul>
           </div>
         </div>
