--- a/Index.html
+++ b/Index.html
@@ -206,12 +206,12 @@
         <div class="row justify-content-center">
           <div class="col-12">
             <ul class="list-inline text-center flex-column flex-md-row">
-              <li class="list-inline-item"><a href="#">Preguntas Frecuentes</a></li>
-              <li class="list-inline-item"><a href="#">Contáctanos</a></li>
-              <li class="list-inline-item"><a href="#">Sponsors</a></li>
-              <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
-              <li class="list-inline-item"><a href="#">Privacidad</a></li>
-              <li class="list-inline-item"><a href="#">Streamers</a></li>
+              <li class="list-inline-item"><a href="#">FB</a></li>
+              <li class="list-inline-item"><a href="#">IG</a></li>
+              <li class="list-inline-item"><a href="#">X</a></li>
+              <li class="list-inline-item"><a href="#">YT</a></li>
+              <li class="list-inline-item"><a href="#">DC</a></li>
+              
               <p> Trabajo Practico Integrador - Python - CAC2024</p>
             </ul>
           </div>
