actualizo carpeta recursos

--- a/Torneo.html
+++ b/Torneo.html
@@ -37,7 +37,7 @@
     <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/recursos/futuro.jpg" class="d-block w-100 oscurecer" alt="...">
+          <img src="/PythonGrupo10/recursos/futuro.jpg" class="d-block w-100 oscurecer" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <div class="mt-4 text-end">
               <h1>Copa FreeFire 2024</h1>
