--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/recursos/dragon.jpg" class="d-block w-100 oscurecer" alt="...">
+            <img src="/PythonGrupo10/recursos/dragon.jpg" class="d-block w-100 oscurecer" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <div class="mt-4 text-end">
                 <h1>Copa FreeFire 2024</h1>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/recursos/payasos.jpg" class="d-block w-100 oscurecer" alt="...">
+            <img src="/PythonGrupo10/recursos/dragon.jpg" class="d-block w-100 oscurecer" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <div class="mt-4 text-end">
                 <h1>Copa FreeFire 2024</h1>
