--- a/Reglamento.html
+++ b/Reglamento.html
@@ -12,7 +12,7 @@
    <header>
      <nav class="navbar bg-dark border-bottom fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
        <div class="container-fluid">
-         <span class="navbar-brand mb-0 h1"><a href="./Index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
+         <span class="navbar-brand mb-0 h1"><a href="./index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
          </span>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
