--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <header>
      <nav class="navbar bg-dark border-bottom fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
        <div class="container-fluid">
-         <span class="navbar-brand mb-0 h1"><a href="./Index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
+         <span class="navbar-brand mb-0 h1"><a href="./index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
          </span>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
@@ -35,11 +35,7 @@
 
     <section>
       <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+        
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="/PythonGrupo10/recursos/dragon.jpg" class="d-block w-100 oscurecer" alt="...">
@@ -48,47 +44,15 @@
                 <h1>Copa FreeFire 2024</h1>
                 <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
                 <div class="row">
-                  <div class="col"><a class="participar btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
+                  <div class="col"><a class="participar btn btn-outline-light text-white" href="#participar">Quiero participar</a></div>
                   <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="/PythonGrupo10/recursos/dragon.jpg" class="d-block w-100 oscurecer" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <div class="mt-4 text-end">
-                <h1>Copa FreeFire 2024</h1>
-                <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
-                <div class="row">
-                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
-                  <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/recursos/futuro.jpg" class="d-block w-100 oscurecer" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <div class="mt-4 text-end">
-                <h1>Copa FreeFire 2024</h1>
-                <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increibles premios. Te esperamos!.</p>
-                <div class="row">
-                  <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero ser participar</a></div>
-                  <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
+          
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
       </div>
     </section>
 
