se agrega campo para subir imagen en el form del archivo index

--- a/LugarFecha.html
+++ b/LugarFecha.html
@@ -22,7 +22,7 @@
              <a class="nav-link active" aria-current="page" href="./Torneo.html">El Torneo</a>
              <a class="nav-link" href="./LugarFecha.html">El lugar y la fecha</a>
              <a class="nav-link" href="./Reglamento.html">Reglamento</a>
-             <a class="nav-link" href="./Fixture">Fixture</a>
+             <a class="nav-link" href="./Fixture.html">Fixture</a>
            </div>
           </div>
         </div>
