--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
               <label for="mensaje">Mensaje</label>
               <textarea class="form-control mb-3" id="mensaje" rows="4" placeholder="Contanos sobre tu escuadra"></textarea>
             </div>
+            <div class="form-group">
+             <label for="imagen">Sube el escudo de tu escuadra</label>
+             <input type="file" class="form-control mb-3" id="imagen" name="imagen">
+            </div>
             <button type="submit" class="btn btn-success btn-lg btn-block">Enviar</button>
           </form>
         </div>
