se modifica LugarFecha y Styles se agrega imagen

--- a/LugarFecha.html
+++ b/LugarFecha.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ProyectoPythonGrupo10</title>
     <link rel="stylesheet" type="text/css" href="./Styles.css">
+    
+<!--<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>-->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
@@ -12,8 +15,8 @@
    <header>
      <nav class="navbar bg-dark border-bottom fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
        <div class="container-fluid">
-         <span class="navbar-brand mb-0 h1"><a href="./index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>24
-         </span>
+         <span class="navbar-brand mb-0 h1"><a href="./index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a>
+                </span>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,7 +34,7 @@
    <!-- /NAVBAR -->
 
 
-   <!-- BANNER -->
+   <!-- BANNER 
 
    <section>
     <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
@@ -52,9 +55,24 @@
        </div>
     </div>
   </section>
+-->
 
 
     <!-- LUGAR Y FECHA -->
+    <section id="lugar_fecha">
+        <article id="presentacion">
+        <h1>31 de Mayo 2024</h1>
+        <h1>COSTA SALGUERO</h1>
+        <p>Llega el evento más esperado del año</p>
+        <p>Reserva tu lugar</p>
+      </article>
+      <div id="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.328123402823!2d-58.3989847253355!3d-34.57056315574618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb569a4bcdd35%3A0x558fa1541e2b1c2a!2sCentro%20Costa%20Salguero!5e0!3m2!1ses!2sar!4v1716526434565!5m2!1ses!2sar" 
+        width="30%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+
+
+    </section>
     <!-- /LUGAR Y FECHA -->
 
 
