--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ProyectoPythonGrupo10</title>
-    <link rel="stylesheet" type="text/css" href="./Styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
@@ -63,9 +63,13 @@
 
     <!-- PERSONAJES -->
    <section id="personajes" class="mt-4 mb-4">
-      <h6 class="text-center">Los</h6>
-      <h2 class="text-center mb-4">favoritos</h2>
+      
+
       <div class="row align-items-center justify-content-center">
+        <div class="favs">
+           <h2 class="text-center">Los favoritos</h2>
+         </div>
+
         <div class="col-auto">
           <div class="card card-custom mb-4">
             <img src="recursos/CharacterAlok.png" class="card-img-top" alt="...">
@@ -141,7 +145,7 @@
             <h6 class="mb-3 text-center contacto-h6">Anotate con tu escuadra para hacer Booyah! Contanos sobre sus habilidades preferidas!</h6>
             <div class="form-group">
               <label for="nombre">Nombre</label>
-              <input type="text" class="form-control mb-3" id="nombre" placeholder="Ingresa su nombre">
+              <input type="text" class="form-control mb-3" id="nombre" placeholder="Ingresa tu nombre">
             </div>
             <div class="form-group">
               <label for="apellido">Apellido</label>
@@ -154,6 +158,15 @@
             <div class="form-group">
               <label for="mensaje">Mensaje</label>
               <textarea class="form-control mb-3" id="mensaje" rows="4" placeholder="Contanos sobre tu escuadra"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="modo">En qué modo quieres participar?</label>
+              <select class="form-control mb-3" id="modo" name="modo">
+                <option value="" disabled selected>Selecciona un modo</option>
+                <option value="battle_royal">Battle Royal</option>
+                <option value="duelo_escuadra">Duelo de Escuadra</option>
+                <option value="ambos">Ambos</option>
+              </select>
             </div>
             <div class="form-group">
              <label for="imagen">Sube el escudo de tu escuadra</label>
