--- a/pages/LugarFecha.html
+++ b/pages/LugarFecha.html
@@ -4,27 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ProyectoPythonGrupo10</title>
-    <link rel="stylesheet" type="text/css" href="./Styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
-      <header>
-          <a href="../Index.html" class="logo">
-              <img src="/images/logo.png" alt="Logo Free Fire">
-          </a>
-          <nav>
-              <a href="/pages/Torneo.html" class="nav-link">Torneo</a>
-              <a href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
-              <a href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
-              <a href="/pages/Fixture.html" class="nav-link">Fixture</a>
-          </nav>
-      </header>
+  <body>   
+    <!-- HEADER -->
+    <header>
+        <a href="../index.html" class="logo"> 
+          <img src="/images/logo.png" alt="Logo Free Fire">
+        </a>
+        <nav>
+          <a class="nav-link active" aria-current="page" href="/pages/Torneo.html" >Torneo</a>
+          <a class="nav-link" href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
+          <a class="nav-link" href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
+          <a class="nav-link" href="/pages/Fixture.html" class="nav-link">Fixture</a>
+        </nav>
+    </header>
+    <!-- /HEADER -->
+    <!-- BANNER -->
+    <section>
+        <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/images/ciudad680.jpg" class="d-block w-100 oscurecer banner-image" alt="bar">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /BANNER -->
 
 
-   <!--  LUGAR Y FECHA -->
-   <!-- /LUGAR Y FECHA -->
+      <!--  LUGAR Y FECHA -->
+    
+       <section id="lugar_fecha">
+        <article id="presentacion">
+        <h1>31 de octubre 2024</h1>
+        <h1>COSTA SALGUERO</h1>
+        <p>Llega el evento más esperado del año</p>
+        <p>Reserva tu lugar</p>
+      </article>
+      <div id="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.328123402823!2d-58.3989847253355!3d-34.57056315574618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb569a4bcdd35%3A0x558fa1541e2b1c2a!2sCentro%20Costa%20Salguero!5e0!3m2!1ses!2sar!4v1716526434565!5m2!1ses!2sar" 
+        width="30%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
 
-   
+
+       </section>
+     <!-- /LUGAR Y FECHA -->  
 
 
      <footer class="footer">
