--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ProyectoPythonGrupo10</title>
-    <link rel="stylesheet" type="text/css" href="./Styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
+    <script defer src="./js/javascript.js"></script>  </head>
   <body>
-      <header>
-          <a href="../Index.html" class="logo">
-              <img src="/images/logo.png" alt="Logo Free Fire">
-          </a>
-          <nav>
-              <a href="/pages/Torneo.html" class="nav-link">Torneo</a>
-              <a href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
-              <a href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
-              <a href="/pages/Fixture.html" class="nav-link">Fixture</a>
-          </nav>
-      </header>
+      <!-- HEADER -->
+    <header>
+        <a href="../index.html" class="logo"> 
+          <img src="/images/logo.png" alt="Logo Free Fire">
+        </a>
+        <nav>
+          <a class="nav-link active" aria-current="page" href="/pages/Torneo.html" >Torneo</a>
+          <a class="nav-link" href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
+          <a class="nav-link" href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
+          <a class="nav-link" href="/pages/Fixture.html" class="nav-link">Fixture</a>
+        </nav>
+    </header>
+    <!-- /HEADER -->
+    <!-- BANNER -->
+    <section>
+        <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/images/trofeo.png" class="d-block w-100 oscurecer banner-image" alt="bar">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /BANNER -->
   
 
    <!--  TORNEO -->
