se corrige la superposición de estilos en la pagina lugarfecha

--- a/pages/LugarFecha.html
+++ b/pages/LugarFecha.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <!-- /HEADER -->
-    <!-- BANNER -->
+    <!-- BANNER : comentado porque la imagen esta en la hoja de estilos
     <section>
         <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
             <div class="carousel-inner">
@@ -31,25 +31,26 @@
             </div>
         </div>
     </section>
-    <!-- /BANNER -->
+    /banner -->
 
 
       <!--  LUGAR Y FECHA -->
     
-       <section id="lugar_fecha">
+      <section id="lugar_fecha">
+        <link rel="stylesheet" type="text/css" href="../css/styles.css">
         <article id="presentacion">
-        <h1>31 de octubre 2024</h1>
-        <h1>COSTA SALGUERO</h1>
-        <p>Llega el evento más esperado del año</p>
-        <p>Reserva tu lugar</p>
-      </article>
-      <div id="mapa">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.328123402823!2d-58.3989847253355!3d-34.57056315574618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb569a4bcdd35%3A0x558fa1541e2b1c2a!2sCentro%20Costa%20Salguero!5e0!3m2!1ses!2sar!4v1716526434565!5m2!1ses!2sar" 
-        width="30%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+          <h1>31 de octubre 2024</h1>
+          <h1>COSTA SALGUERO</h1>
+          <p>Llega el evento más esperado del año</p>
+          <p>Reserva tu lugar</p>
+        </article>
+        <div id="mapa">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.328123402823!2d-58.3989847253355!3d-34.57056315574618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb569a4bcdd35%3A0x558fa1541e2b1c2a!2sCentro%20Costa%20Salguero!5e0!3m2!1ses!2sar!4v1716526434565!5m2!1ses!2sar" 
+          width="30%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
 
-
-       </section>
+      </section>
+        
      <!-- /LUGAR Y FECHA -->  
 
 
