enlace arreglado de index, linea 14

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- HEADER -->
     <header>
-        <a href="./css/header.css" class="logo"> 
+        <a href=".//index.html" class="logo">  
           <img src="/images/logo.png" alt="Logo Free Fire">
         </a>
         <nav>
