--- a/pages/Reglamento.html
+++ b/pages/Reglamento.html
@@ -12,15 +12,16 @@
     <!-- HEADER -->
     <header>
         <a href="../index.html" class="logo"> 
-          <img src="/images/logo.png" alt="Logo Free Fire">
+            <img src="../images/logo.png" alt="Logo Free Fire">
         </a>
         <nav>
-          <a class="nav-link active" aria-current="page" href="/pages/Torneo.html" >Torneo</a>
-          <a class="nav-link" href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
-          <a class="nav-link" href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
-          <a class="nav-link" href="/pages/Fixture.html" class="nav-link">Fixture</a>
+            <a class="nav-link" href="Torneo.html">Torneo</a>
+            <a class="nav-link" href="LugarFecha.html">Fecha y Lugar</a>
+            <a class="nav-link" href="Reglamento.html">Reglamento</a>
+            <a class="nav-link" href="Fixture.html">Fixture</a>
         </nav>
     </header>
+    
     <!-- /HEADER -->
     <!-- BANNER -->
     <section>
