corrijo enlaces de footer en reglamento html

--- a/pages/Reglamento.html
+++ b/pages/Reglamento.html
@@ -28,7 +28,7 @@
         <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/bar680.png" class="d-block w-100 oscurecer banner-image" alt="bar">
+                    <img src="../images/bar680.png" class="d-block w-100 oscurecer banner-image" alt="bar">
                 </div>
             </div>
         </div>
@@ -107,10 +107,10 @@
             </li>
         </ul>
         <ul class="menu">
-            <li class="menu_item"><a class="menu_link" href="/Index.html">Torneo</a></li>
-            <li class="menu_item"><a class="menu_link" href="/pages/LugarFecha.html">Fecha y Lugar</a></li>
-            <li class="menu_item"><a class="menu_link" href="/pages/Reglamento.html">Reglamento</a></li>
-            <li class="menu_item"><a class="menu_link" href="/pages/Fixture.html">Fixture</a></li>
+            <li class="menu_item"><a class="menu_link" href="Torneo.html">Torneo</a></li>
+            <li class="menu_item"><a class="menu_link" href="LugarFecha.html">Fecha y Lugar</a></li>
+            <li class="menu_item"><a class="menu_link" href="Reglamento.html">Reglamento</a></li>
+            <li class="menu_item"><a class="menu_link" href="Fixture.html">Fixture</a></li>
         </ul>
         <picture class="header_logo_image">
             <a href="./index.html">
