se corrigen enlaces de index y reglamento html en header y footer.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="images/logo.png" alt="Logo Free Fire">
         </a>
         <nav>
-          <a class="nav-link active" aria-current="page" href="/pages/Torneo.html" >Torneo</a>
+          <a class="nav-link active" aria-current="page" href="./pages/Torneo.html" >Torneo</a>
           <a class="nav-link" href="./pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
           <a class="nav-link" href="./pages/Reglamento.html" class="nav-link">Reglamento</a>
           <a class="nav-link" href="./pages/Fixture.html" class="nav-link">Fixture</a>
@@ -177,14 +177,14 @@
           </li>
       </ul>
       <ul class="menu">
-          <li class="menu_item"><a class="menu_link" href="/Index.html">Torneo</a></li>
-          <li class="menu_item"><a class="menu_link" href="/pages/LugarFecha.html">Fecha y Lugar</a></li>
-          <li class="menu_item"><a class="menu_link" href="/pages/Reglamento.html">Reglamento</a></li>
-          <li class="menu_item"><a class="menu_link" href="/pages/Fixture.html">Fixture</a></li>
+          <li class="menu_item"><a class="menu_link" href="./pages/Torneo.html"">Torneo</a></li>
+          <li class="menu_item"><a class="menu_link" href="./pages/LugarFecha.html">Fecha y Lugar</a></li>
+          <li class="menu_item"><a class="menu_link" href="./pages/Reglamento.html">Reglamento</a></li>
+          <li class="menu_item"><a class="menu_link" href="./pages/Fixture.html">Fixture</a></li>
       </ul>
       <picture class="header_logo_image">
           <a href="./index.html">
-              <img src="../images/logo.png">
+              <img src="images/logo.png">
           </a>
       </picture>
       <i class="fa-solid fa-phone"></i>
