--- a/pages/Reglamento.html
+++ b/pages/Reglamento.html
@@ -113,7 +113,7 @@
             <li class="menu_item"><a class="menu_link" href="Fixture.html">Fixture</a></li>
         </ul>
         <picture class="header_logo_image">
-            <a href="./index.html">
+            <a href="../index.html">
                 <img src="../images/logo.png">
             </a>
         </picture>
