error de tipeo en index

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <!-- version responsive -->
         <div class="col-12 mt-4 d-lg-none">
-          <img src="recursos/img1.png" alt="Imagen" class="img1">
+          <img src="images/img1.png" alt="Imagen" class="img1">
         </div>
         <div class="col-12 bg-dark d-lg-none">
           <h3 class="text-white p-4">Bs As - Octubre</h3>
@@ -177,7 +177,7 @@
           </li>
       </ul>
       <ul class="menu">
-          <li class="menu_item"><a class="menu_link" href="./pages/Torneo.html"">Torneo</a></li>
+          <li class="menu_item"><a class="menu_link" href="./pages/Torneo.html">Torneo</a></li>
           <li class="menu_item"><a class="menu_link" href="./pages/LugarFecha.html">Fecha y Lugar</a></li>
           <li class="menu_item"><a class="menu_link" href="./pages/Reglamento.html">Reglamento</a></li>
           <li class="menu_item"><a class="menu_link" href="./pages/Fixture.html">Fixture</a></li>
