--- a/pages/LugarFecha.html
+++ b/pages/LugarFecha.html
@@ -51,10 +51,10 @@
 
       </section>
         
-     <!-- /LUGAR Y FECHA -->  
+    <!-- /LUGAR Y FECHA -->  
 
 
-     <footer class="footer">
+      <footer class="footer">
         <ul class="social-icon">
             <li class="social-icon_item">
                 <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
@@ -67,7 +67,7 @@
             </li>
         </ul>
         <ul class="menu">
-            <li class="menu_item"><a class="menu_link" href="/Index.html">Torneo</a></li>
+            <li class="menu_item"><a class="menu_link" href="/pages/Torneo.html">Torneo</a></li>
             <li class="menu_item"><a class="menu_link" href="/pages/LugarFecha.html">Fecha y Lugar</a></li>
             <li class="menu_item"><a class="menu_link" href="/pages/Reglamento.html">Reglamento</a></li>
             <li class="menu_item"><a class="menu_link" href="/pages/Fixture.html">Fixture</a></li>
