--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <!-- version responsive -->
         <div class="col-12 mt-4 d-lg-none">
-          <img src="recursos/img1.png" alt="Imagen" class="img1">
+          <img src="/images/img1.png" alt="Imagen" class="img1">
         </div>
         <div class="col-12 bg-dark d-lg-none">
           <h3 class="text-white p-4">Bs As - Octubre</h3>
