--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -34,15 +34,14 @@
                             <h1>Copa FreeFire 2024</h1>
                             <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increíbles premios. ¡Te esperamos!</p>
                             <div class="row">
-                                <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero participar</a></div>
                                 <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Additional carousel items -->
-                <div class="carousel-item">
-                    <img src="./images/bermuda-map.jpg" class="d-block w-100 oscurecer" alt="Map">
+            <!-- Additional carousel items -->
+            <div class="carousel-item">
+                <img src="./images/bermuda-map.jpg" class="d-block w-100 oscurecer" alt="Map">
                     <div class="carousel-caption d-none d-md-block">
                         <div class="mt-4 text-end">
                             <h5>Subtítulo Imagen 2</h5>
@@ -75,19 +74,27 @@
     <!-- /BANNER -->
 
     <!-- TORNEO -->
-    <section class="container mt-5 pt-5">
+    <section class="container my-5">
         <div class="row">
-            <div class="col-12 col-md-8 offset-md-2">
+            <div class="container my-5">
                 <h2>Detalles del Torneo</h2>
                 <h3>Tipo de Torneo</h3>
                 <p>El torneo será de tipo eliminación directa, donde cada equipo competirá en rondas sucesivas hasta que solo quede un ganador. Los equipos se enfrentarán en partidas de FreeFire, demostrando sus habilidades y estrategias.</p>
 
-                <h2>Premios</h2>
+                <h1>Premios</h1>
                 <ul>
-                    <li><strong>Primer Lugar:</strong> U$S5,000 en efectivo y trofeo del campeonato.</li>
-                    <li><strong>Segundo Lugar:</strong> U$S2,500 en efectivo.</li>
-                    <li><strong>Tercer Lugar:</strong> U$S1,000 en efectivo.</li>
-                    <li><strong>Premio Especial:</strong> Medallas para todos los miembros del equipo ganador y merchandise de FreeFire.</li>
+                    <li><strong>
+                        Primer Lugar: U$S 5.000 en efectivo y un majestuoso trofeo del campeonato.</li></strong>
+                        <p>Este premio no solo representa una recompensa económica significativa, sino también el reconocimiento y la gloria de ser los campeones del torneo. El trofeo será un símbolo de su arduo trabajo, dedicación y superioridad en el campo de batalla de FreeFire.</p>
+                    <li><strong>
+                        Segundo Lugar: U$S 2.500 en efectivo.</li></strong>
+                        <p>Aunque no se lleve el trofeo, el equipo que obtenga el segundo lugar será recompensado generosamente por su excelente desempeño y habilidad. Este premio es un testimonio de su talento y esfuerzo a lo largo del torneo.</p>
+                    <li><strong>
+                        Tercer Lugar: U$S 1.000 en efectivo.</li></strong>
+                        <p>El equipo que termine en tercer lugar también será reconocido por su destacada actuación. Este premio refleja su capacidad para competir al más alto nivel y llegar a las etapas finales del torneo.</p>
+                    <li><strong>
+                        Premio Especial: Medallas para todos los miembros del equipo ganador y mercancía exclusiva de FreeFire.</li></strong>
+                        <p>Además del trofeo y el premio en efectivo, los campeones recibirán medallas conmemorativas que podrán llevar con orgullo. También recibirán productos exclusivos de FreeFire, incluyendo camisetas, gorras y otros artículos de colección que celebran su victoria y les permiten mostrar su amor por el juego.</p>
                 </ul>
             </div>
         </div>
@@ -127,6 +134,14 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBogGzHfQ5SA6L4FvMXgiPR+ujRHP+0Ck2wI0XK2aDZRd4ju" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-cuNTG+uaT2EqPsMeUXE7t5u4J5Be6z9P9YcuEnA/91ZoPaToV3BIpC//G4pOGti" crossorigin="anonymous"></script>
-    <script src="./js/javascript.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const carousel = new bootstrap.Carousel(document.querySelector('#carouselExampleCaptions'), {
+                interval: 3000, // Cambiar de imagen cada 3 segundos
+                ride: 'carousel'
+            });
+        });
+    </script>
+
 </body>
 </html>
