--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -48,10 +48,16 @@
     <!-- TORNEO -->
     <section class="container my-5">
         <div class="row">
-            <div class="container my-5">
+            <div class="col-12 col-md-8 offset-md-2">
                 <h2>Detalles del Torneo</h2>
                 <h3>Tipo de Torneo</h3>
-                <p>El torneo será de tipo eliminación directa, donde cada equipo competirá en rondas sucesivas hasta que solo quede un ganador. Los equipos se enfrentarán en partidas de FreeFire, demostrando sus habilidades y estrategias.</p>
+                <p>En este emocionante torneo de FreeFire, el formato será de eliminación directa, un estilo que garantiza adrenalina y emoción en cada partida. Cada equipo competirá en rondas sucesivas, enfrentándose cara a cara en intensas batallas hasta que solo quede un ganador. Este formato no solo pone a prueba las habilidades individuales de los jugadores, sino también su capacidad para trabajar en equipo y desarrollar estrategias efectivas bajo presión.</p>
+                
+                <p>Desde el primer enfrentamiento, los equipos deberán demostrar su destreza y rapidez de pensamiento para superar a sus oponentes. Cada victoria los acercará un paso más a la gloria, mientras que cada derrota significará el final de su camino en el torneo.</p>
+                <p>Las partidas de FreeFire en este torneo no serán solo una prueba de habilidades técnicas, sino también de resistencia mental y cohesión de equipo. Los jugadores tendrán que adaptarse rápidamente a las tácticas de sus adversarios, tomar decisiones en fracciones de segundo y mantener la calma bajo presión. Cada partida será una oportunidad para que los equipos muestren su mejor juego, deleitando a los espectadores con jugadas impresionantes y estrategias innovadoras.</p>
+                <p>Además, el formato de eliminación directa añade un nivel extra de emoción, ya que cada partida podría ser la última para cualquier equipo. Este factor de alto riesgo asegura que todos los participantes den su máximo esfuerzo en cada enfrentamiento, haciendo del torneo un espectáculo imperdible tanto para los jugadores como para los fanáticos de FreeFire.</p>
+                <p>¡Prepárate para vivir la intensidad de la competencia y la emoción de la victoria en este torneo único de FreeFire!</p>
+                
                 <h1>Premios</h1>
                 <ul>
                     <li><strong>
