--- a/pages/Reglamento.html
+++ b/pages/Reglamento.html
@@ -34,8 +34,8 @@
     </section>
     <!-- /BANNER -->
     <!--  REGLAMENTO -->
-    <section>
-        <div class="container my-5">
+    <section class="container my-5">
+        <div class="row">
             <h2>Reglas para un juego justo</h2>
             
             <h3>1. Presentación</h3>
