se corrije header y footer de archivo lugarfecha.html. se agregan actualizaciones de archivo trofeo.html que no pudieron realizarse por la rama correspondiente

--- a/pages/LugarFecha.html
+++ b/pages/LugarFecha.html
@@ -10,31 +10,19 @@
   <body>   
     <!-- HEADER -->
     <header>
-        <a href="../index.html" class="logo"> 
-          <img src="/images/logo.png" alt="Logo Free Fire">
-        </a>
-        <nav>
-          <a class="nav-link active" aria-current="page" href="/pages/Torneo.html" >Torneo</a>
-          <a class="nav-link" href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
-          <a class="nav-link" href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
-          <a class="nav-link" href="/pages/Fixture.html" class="nav-link">Fixture</a>
-        </nav>
-    </header>
-    <!-- /HEADER -->
-    <!-- BANNER : comentado porque la imagen esta en la hoja de estilos
-    <section>
-        <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="false">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/images/ciudad680.jpg" class="d-block w-100 oscurecer banner-image" alt="bar">
-                </div>
-            </div>
-        </div>
-    </section>
-    /banner -->
-
-
-      <!--  LUGAR Y FECHA -->
+      <a href="../index.html" class="logo"> 
+          <img src="../images/logo.png" alt="Logo Free Fire">
+      </a>
+      <nav>
+        <a class="nav-link" href="Torneo.html">Torneo</a>
+        <a class="nav-link" href="LugarFecha.html">Fecha y Lugar</a>
+        <a class="nav-link" href="Reglamento.html">Reglamento</a>
+        <a class="nav-link" href="Fixture.html">Fixture</a>
+      </nav>
+   </header>
+  
+   <!-- /HEADER -->
+   <!--  LUGAR Y FECHA -->
     
       <section id="lugar_fecha">
         <link rel="stylesheet" type="text/css" href="../css/styles.css">
@@ -51,35 +39,37 @@
 
       </section>
         
-     <!-- /LUGAR Y FECHA -->  
+    <!-- /LUGAR Y FECHA -->  
 
 
-     <footer class="footer">
-        <ul class="social-icon">
-            <li class="social-icon_item">
-                <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-            </li>
-            <li class="social-icon_item">
-                <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-            </li>
-            <li class="social-icon_item">
-                <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-            </li>
-        </ul>
-        <ul class="menu">
-            <li class="menu_item"><a class="menu_link" href="/Index.html">Torneo</a></li>
-            <li class="menu_item"><a class="menu_link" href="/pages/LugarFecha.html">Fecha y Lugar</a></li>
-            <li class="menu_item"><a class="menu_link" href="/pages/Reglamento.html">Reglamento</a></li>
-            <li class="menu_item"><a class="menu_link" href="/pages/Fixture.html">Fixture</a></li>
-        </ul>
-        <picture class="header_logo_image">
-        <a href="./index.html">
+    <!-- FOOTER -->
+    <footer class="footer">
+      <ul class="social-icon">
+          <li class="social-icon_item">
+            <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+          </li>
+          <li class="social-icon_item">
+           <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+          </li>
+          <li class="social-icon_item">
+           <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+          </li>
+      </ul>
+      <ul class="menu">
+        <li class="menu_item"><a class="menu_link" href="Torneo.html">Torneo</a></li>
+        <li class="menu_item"><a class="menu_link" href="LugarFecha.html">Fecha y Lugar</a></li>
+        <li class="menu_item"><a class="menu_link" href="Reglamento.html">Reglamento</a></li>
+        <li class="menu_item"><a class="menu_link" href="Fixture.html">Fixture</a></li>
+      </ul>
+      <picture class="header_logo_image">
+          <a href="../index.html">
             <img src="../images/logo.png">
-        </a>
-        </picture>
-        <i class="fa-solid fa-phone"></i>
-        <p>&copy;Free Fire | All Rights Reserved</p>
+          </a>
+      </picture>
+      <i class="fa-solid fa-phone"></i>
+      <p>&copy;Free Fire | All Rights Reserved</p>
     </footer>
+    <!-- /FOOTER -->
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
