se corrije reglamento, enlace caido

--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -21,6 +21,7 @@
             <a class="nav-link" href="Fixture.html">Fixture</a>
         </nav>
     </header>
+    <!-- /HEADER -->
     
     <!-- BANNER -->
     <section>
